k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-management # İstediğiniz namespace adını verin
