k8s/base/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/students(/|$)(.*)
            backend:
              service:
                name: student-service
                port:
                  number: 80
          - pathType: Prefix
            path: /api/courses(/|$)(.*)
            backend:
              service:
                name: course-service
                port:
                  number: 80
          - pathType: Prefix
            path: /api/grades(/|$)(.*)
            backend:
              service:
                name: grade-service
                port:
                  number: 80
